# fcot-re

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fcot_re/: __init__.py  engine.py
tests/: test_placeholder.py
