toml\n[build-system]\nrequires = [\"setuptools>=68\", \"wheel\"]\nbuild-backend = \"setuptools.build_meta\"\n\n[project]\nname = \"fcot-re\"\nversion = \"0.0.0a0\"\ndescription = \"Formal Chain-of-Thought Reasoning Engine (skeleton)\"\nauthors = [{ name = \"YOUR NAME\" }]\nreadme = \"README.md\"\nrequires-python = \">=3.10\"\n\n[project.optional-dependencies]\ndev = [\"ruff\", \"black\", \"mypy\", \"pytest\", \"pytest-cov\"]\n
